# hakoniwa-core-cpp

./: .gitignore  API_SPEC.md  CMakeLists.txt  README.md  SHARED_MEMORY_SPEC.md  build.bash  cpp_core_config.json  default-cmake-options.cmake  hakoniwa_core_config.json
.github/workflows/: build_and_test.yml
docs/: API_SPEC_EN.md  README_EN.md  SHARED_MEMORY_SPEC_EN.md
sample/: CMakeLists.txt
sample/base-procs/hako-asset/: CMakeLists.txt
sample/base-procs/hako-asset/src/: hako_asset.cpp
sample/base-procs/hako-cmd/: CMakeLists.txt
sample/base-procs/hako-cmd/src/: hako_cmd.cpp
sample/base-procs/hako-master/: CMakeLists.txt
sample/base-procs/hako-master/src/: hako_master.cpp
src/: CMakeLists.txt
src/hako/: hako_asset_impl.cpp  hako_asset_impl.hpp  hako_impl.cpp  hako_master_impl.cpp  hako_master_impl.hpp  hako_simevent_impl.cpp  hako_simevent_impl.hpp
src/hako/core/context/: hako_context.hpp
src/hako/core/rpc/: hako_internal_rpc.cpp
src/hako/core/simulation/time/: hako_time.cpp
src/hako/data/: hako_base_data.hpp  hako_master_data.hpp  hako_pdu_data.hpp
src/hako/utils/: hako_assert.hpp  hako_clock.hpp  hako_config_loader.hpp  hako_logger.cpp  hako_logger.hpp  hako_sem.cpp  hako_shared_memory.cpp
src/hako/utils/hako_share/: hako_sem_flock.hpp  hako_shared_memory.hpp  hako_shared_memory_factory.hpp  hako_shared_memory_mmap.hpp  hako_shared_memory_shm.hpp
src/hako/utils/hako_share/impl/: hako_flock.hpp  hako_mmap.hpp  hako_sem.cpp  hako_sem_flock.cpp  hako_shared_memory.cpp  hako_shared_memory_factory.cpp  hako_shared_memory_mmap.cpp
src/hako/utils/hako_share/impl/posix/: hako_flock.cpp  hako_mmap.cpp  hako_sem.cpp  hako_sem_flock.cpp  hako_shared_memory_mmap.cpp  hako_shared_memory_shm.cpp
src/hako/utils/hako_share/impl/win/: hako_flock.cpp  hako_mmap.cpp  os_file_io.cpp
src/include/: hako.hpp  hako_asset.hpp  hako_extension.hpp  hako_log.hpp  hako_simevent.hpp
src/include/config/: hako_config.hpp
src/include/types/: hako_osdeps.hpp  hako_types.hpp
src/include/types/win/: os_file_io.hpp
test/: CMakeLists.txt
test/hako/: hako_shared_memory_test.cpp  hako_test.cpp  main.cpp
